# NglView_website

./: .gitignore  CMakeLists.txt  README.md  countries.txt  main.py  module.cpp  requirements.txt  setup.py  test.py  test2.py  tmp_script.py
mutations_html/: 1ycr_Repair_Model_EB17A.html
templates/: after_upload.html  base.html  ngl_view_pdb.html
templates/mutation_templates/: 1ycr_Repair_Model_EB17A.html  1ycr_Repair_Model_EB17A.json  1ycr_Repair_Model_EB28R.html  1ycr_Repair_Model_EB28R.json
uploads/: 1ycr_Repair_Model_EB17A.cif  1ycr_Repair_Model_EB28R.cif
