cmake_minimum_required(VERSION 3.17)
project(Module)
set(countriesPath "${CMAKE_CURRENT_LIST_DIR}/countries.txt")
find_package(pybind11 REQUIRED)
message(STATUS ${countriesPath})
add_definitions(-DcountriesPath="${countriesPath}")
add_executable(Module module.cpp)
target_include_directories(Module PUBLIC ${pybind11_INCLUDE_DIRS})
target_link_libraries(Module PUBLIC ${pybind11_LIBRARIES})
