cmake_minimum_required(VERSION 3.17)
project(update_db)
set(countriesPath "${CMAKE_CURRENT_LIST_DIR}/countries.txt")
set(pybind11Sub "")
find_package(Python COMPONENTS Interpreter Development REQUIRED)
find_package(pybind11 REQUIRED)
find_package(pybind11 CONFIG REQUIRED)
message(STATUS ${countriesPath})
add_definitions(-DcountriesPath="${countriesPath}")
pybind11_add_module(update_db module.cpp)
target_include_directories(update_db PUBLIC ${pybind11_INCLUDE_DIRS})
target_link_libraries(update_db PUBLIC ${pybind11_LIBRARIES})
